REFACTOR : add semantic html header component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<header>
+    <div class="nav-container">
+        <a href="#" routerLink="/">
+            <img class="logo" src="/assets/img/club-country-saloon-82-logo-beige.png" alt="Logo club Country Saloon 82">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="#" routerLink="/" class="nav-link">Accueil</a></li>
+                <li><a href="#" routerLink="/b-a-ba" class="nav-link">B-A-BA de la country</a></li>
+                <li><a href="#" routerLink="/agenda" class="nav-link">Agenda</a></li>
+                <li><a href="#" routerLink="/club" class="nav-link">Le club</a></li>
+                <li><a href="#" routerLink="/livre-or" class="nav-link">Livre d'or</a></li>
+                <li><a href="#" routerLink="/galerie" class="nav-link">Galerie</a></li>
+                <li><a href="#" routerLink="/contact" class="btn secondary">Contact</a></li>
+                <li><a href="#" routerLink="/connexion" class="btn">Connexion</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="title-container">
+        <h1>
+            Country Saloon 82
+        </h1>
+        <h2>
+            Club de danse Country à St-Étienne-de-Tulmont
+        </h2>
+    </div>
+</header>
