STYLE : add desktop-device style header component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+    <div class="overlay"></div>
     <div class="nav-container">
         <a href="#" routerLink="/">
             <img class="logo" src="/assets/img/club-country-saloon-82-logo-beige.png" alt="Logo club Country Saloon 82">
