--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -94,3 +94,37 @@ header {
         }
     }
 }
+
+@media (max-width: 1250px) { 
+    header {
+        .nav-container {
+            top: 0;
+            width: 100%;
+            padding: 36px 50px 0 50px;
+
+            img.logo {
+                height: 135px;
+            }
+        }
+
+        .title-container {
+            width: 100%;
+            
+            h1 {
+                font-size: 56px;
+            }
+
+            h2 {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1180px) { 
+    header {
+        .title-container {
+            width: 100%;
+        }
+    }
+}
