REFACTOR : add semantic html footer component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<footer>
+    <div class="container-footer">
+        <div class="contact">
+            <span class="material-symbols-sharp">mail</span>
+            <a href="" routerLink="/contact" class="btn">Contactez-nous</a>
+        </div>
+        <div class="logo-footer">
+            <img src="/assets/img/club-country-saloon-82-logo-footer.png" alt="Logo club Country Saloon 82">
+        </div>
+        <div class="social-media">
+            <p>Rejoignez nous sur les réseaux sociaux !<br />
+                <a target="_blank" href="https://www.facebook.com/countrysaloon82">
+                    <img class="facebook" src="/assets/img/facebook-logo.png" alt="logo facebook">
+                </a>
+            </p>
+            <p>
+                <a href="" routerLink="/mentions-legales">Mentions légales</a>
+            </p>
+        </div>
+    </div>
+    <p class="copyrights">© 2023 - developed by <a target="_blank" href="https://line-development.fr/">Line Development</a> for Country Saloon 82. All rights reserved </p>
+</footer>
