STYLE : add desktop-device style footer component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,5 +18,5 @@
             </p>
         </div>
     </div>
-    <p class="copyrights">© 2023 - developed by <a target="_blank" href="https://line-development.fr/">Line Development</a> for Country Saloon 82. All rights reserved </p>
+    <div class="copyright">© 2023 - developed by <a target="_blank" href="https://line-development.fr/">Line Development</a> for Country Saloon 82. All rights reserved </div>
 </footer>
