--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,16 @@ body {
     color: var(--textColor);
 }
 
+app-root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex-grow: 1;
+}
+
 a {
     font-weight: 600;
     text-decoration: none;
