--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -19,6 +19,7 @@ footer {
         height: 100%;
 
         .contact {
+            z-index: 2;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -72,6 +73,36 @@ footer {
         a {
             
             color: darkgray;
+        }
+    }
+}
+
+@media (max-width: 820px) {
+    footer .container-footer .logo-footer {
+        display: none;
+    }
+}
+
+@media (max-width: 760px) {
+    footer {
+        .container-footer {
+            flex-direction: column-reverse;
+            align-items: center;
+            padding-bottom: 30px;
+    
+            .social-media {
+                top: 20px;
+                height: 100px;
+                text-align: center;
+                align-items: center;
+                transform: none;
+            }
+        }
+
+        .copyright {
+            width: 365px;
+            left: 50%;
+            transform: translate(-50%);
         }
     }
 }
