--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,4 @@
-header {
+header .header-container {
     position: relative;
     width: 100%;
     height: 608px;
@@ -96,7 +96,7 @@ header {
 }
 
 @media (max-width: 1250px) { 
-    header {
+    header .header-container {
         .nav-container {
             top: 0;
             width: 100%;
@@ -122,7 +122,7 @@ header {
 }
 
 @media (max-width: 1180px) { 
-    header {
+    header .header-container {
         .title-container {
             width: 100%;
         }
@@ -130,7 +130,7 @@ header {
 }
 
 @media (max-width: 760px) {
-    header {
+    header .header-container {
         .nav-container nav ul {
             width: 100%;
         }
@@ -154,7 +154,7 @@ header {
 }
 
 @media (max-width: 400px) {
-    header {
+    header .header-container {
         .nav-container {
             padding: 20px;
         }
