REFACTOR : add president speech

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
 <app-header></app-header>
+<div class="home-page-container">
+    <div class="mot-president">
+        <img src="https://i.imgur.com/BknDbon.png" alt="photo du président du club">
+        <p>“ Nous insérerons ici un petit mot de la part du président pour les visiteurs, les adhérents et futurs adhérents. Encore une phrase pour simuler la présence du texte “<br>
+        <em>- Louis, président du club</em></p>
+    </div>
+</div>
