--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,4 +5,8 @@
         <p>“ Nous insérerons ici un petit mot de la part du président pour les visiteurs, les adhérents et futurs adhérents. Encore une phrase pour simuler la présence du texte “<br>
         <em>- Louis, président du club</em></p>
     </div>
+    <div class="en-bref">
+        <h3>Country Saloon 82 en bref</h3>
+        <app-activities></app-activities>
+    </div>
 </div>
