--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,6 +10,7 @@
         align-items: center;
         max-width: 917px;
         margin: auto;
+        margin-bottom: 70px;
 
         img {
             width: 140px;
@@ -24,6 +25,20 @@
         em {
             display: block;
             text-align: right;
+            color: var(--primaryColor);
+        }
+    }
+
+    .en-bref {
+        width: 100%;
+        height: 400px;
+        margin: auto;
+        background: url('/assets/img/hat-and-boots-illustration.png') no-repeat top left;
+        background-position-y: -58px;
+
+        h3 {
+            padding: 15px 0 0 295px;
+            font-size: 20px;
             color: var(--primaryColor);
         }
     }
