--- a/src/assets/style/var.scss
+++ b/src/assets/style/var.scss
@@ -12,6 +12,7 @@
 
     --primaryColor: #594963;
     --secondaryColor: #E2E2E2;
+    --backgroundColor: #f7f7f7;
     --accentColor: #f0d4a2;
     --footerColor: #252525;
     --textColor: #252525;
