--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,6 +3,7 @@ footer {
     width: 100%;
     height: 350px;
     overflow: hidden;
+    margin-top: 64px;
     padding: 20px 100px;
     background-color: var(--footerColor);
     color: var(--secondaryColor);
