--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,11 +6,11 @@
 
     .mot-president {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: center;
+        align-items: flex-end;
         max-width: 917px;
         margin: auto;
-        margin-bottom: 70px;
+        margin-bottom: 100px;
 
         img {
             width: 140px;
@@ -19,7 +19,23 @@
         }
 
         p {
+            position: relative;
+            z-index: 999;
             width: 80%;
+        }
+
+        p::after {
+            content: '';
+            position: absolute;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            opacity: .06;
+            background-size: contain;
+            background-image: url("/assets/img/logo/club-country-saloon-82-logo-noir.png");
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         em {
@@ -33,7 +49,7 @@
         width: 100%;
         max-width: 1280px;
         height: 400px;
-        margin: auto;
+        margin: auto auto 100px auto;
         background: url('/assets/img/hat-and-boots-illustration.png') no-repeat top left;
         background-position-y: -58px;
 
@@ -46,6 +62,7 @@
         .activities-container {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             max-width: 932px;
             margin: 56px auto auto auto;
         }
