--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 <div class="home-page-container">
-    <div class="mot-president">
-        
+    <section class="mot-president">      
         <p>“ 
             Notre association « loi 1901 », Country Saloon 82, créée en 2018, a pour objet la promotion, la pratique, l’enseignement et le développement de la danse et de la musique dites Country-Western, ainsi que toutes activités accessoires et connexes.<br><br>
             Très vite est venu le partage de la musique country avec de nouveaux membres pour apprendre la
@@ -15,11 +14,11 @@
             “<br>
         <em>- Louis Chevilley, président du club</em></p>
         <img src="https://i.imgur.com/BknDbon.png" alt="photo du président du club">
-    </div>
-    <div class="en-bref">
+    </section>
+    <section class="en-bref">
         <h3>Country Saloon 82 en bref</h3>
         <div class="activities-container">
             <app-activities-card *ngFor="let activity of activitiesCard" [activitiesCard]="activity"></app-activities-card>
         </div>
-    </div>
+    </section>
 </div>
