--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,7 +20,7 @@
 
         p {
             position: relative;
-            z-index: 999;
+            z-index: 20;
             width: 80%;
         }
 
@@ -65,6 +65,32 @@
             flex-wrap: wrap;
             max-width: 932px;
             margin: 56px auto auto auto;
+        }
+    }
+}
+
+@media (max-width: 820px) {
+    .home-page-container .mot-president {
+        flex-direction: column-reverse;
+        align-items: center;
+
+        img {
+            margin-bottom: 50px;
+        }
+    }
+}
+
+@media (max-width: 360px) {
+    .home-page-container .mot-president {
+        text-align: center;
+
+        p::after {
+            display: none;
+        }
+
+        em {
+            margin-top: 20px;
+            text-align: center;
         }
     }
 }
