STYLE : removing en-bref fixed height

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,4 +21,7 @@
             <app-activities-card *ngFor="let activity of activitiesCard" [activitiesCard]="activity"></app-activities-card>
         </div>
     </section>
+    <section class="slider-container">
+        
+    </section>
 </div>
