--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,5 @@
 .home-page-container {
     width: 100%;
-    max-width: 1400px;
     margin: auto;
     margin-top: 50px;
 
@@ -66,6 +65,11 @@
             max-width: 932px;
             margin: auto;
         }
+    }
+
+    .slider-container {
+        width: 100%;
+        height: 434px;
     }
 }
 
