--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,6 @@
         </div>
     </section>
     <section class="slider-container">
-        <app-image-slider></app-image-slider>
+        <app-image-slider [slides]="slides"></app-image-slider>
     </section>
 </div>
