--- a/src/app/imageSlider/imageSlider.component.scss
+++ b/src/app/imageSlider/imageSlider.component.scss
@@ -1,6 +1,10 @@
 .slider{
     position: relative;
 
+    .close {
+        display: none;
+    }
+
     .left-arrow, .right-arrow {
         cursor: pointer;
         position: absolute;
@@ -21,8 +25,43 @@
     .slide {
         width: 100%;
         height: 434px;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
         box-shadow: inset 0px 0px 200px rgb(0, 0, 0);
+    }
+
+    .background-fullscreen {
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgb(0 0 0 / 80%);
+    }
+
+    .close-fullscreen {
+        cursor: pointer;
+        position: absolute;
+        right: 0;
+        transform: translateX(-50%);
+        top: 20px;
+        margin-right: 20px;
+        display: block;
+        font-size: 50px;
+        color: var(--backgroundColor);     
+    }
+
+    .arrow-fullscreen {
+        position: fixed;
+        z-index: 1000;
+    }
+
+    .slider-fullscreen {
+        position: fixed;
+        z-index: 999;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        height: auto;
     }
 }
