REFACTOR : add the president photo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             Bien amicalement à toutes et tous, à très bientôt. 
             “<br>
         <em>- Louis Chevilley, président du club</em></p>
-        <img src="https://i.imgur.com/BknDbon.png" alt="photo du président du club">
+        <img src="/assets/img/president-photo.JPG" alt="photo du président du club">
     </section>
     <section class="en-bref">
         <h3>Country Saloon 82 en bref</h3>
