--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,18 +1,22 @@
 .nav-container {
     z-index: 999;
-    position: relative;
-    top: 26px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    padding: 8px 50px;
+    background: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
-    max-width: 1400px;
-    margin: auto;
 
-    img.logo {
-        height: 175px;
+    .logo {
+        height: 100px;
 
         &.noir {
+            display: block;
+        }
+
+        &.beige {
             display: none;
         }
     }
@@ -28,7 +32,7 @@
 
         a.nav-link {
             position: relative;
-            text-shadow: 0px 2px 4px rgba(0, 0, 0);
+            color: var(--primaryColor);
 
             &::after {
                 content: '';
@@ -37,7 +41,7 @@
                 width: 100%;
                 height: 2px;
                 margin-top:2px;
-                background: var(--secondaryColor);
+                background: var(--primaryColor);
                 transform: scale(0);
                 transition: transform .2s ease-in-out;
             }
@@ -46,72 +50,10 @@
                 transform: scale(1);
             }
         }
-
-        a.btn {
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
-        }
     }
 }
 
-.sticky-nav {
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    padding: 8px 0;
-    background: white;
-
-    .nav-container {
-        top: 0;
-
-        .logo {
-            height: 100px;
-
-            &.noir {
-                display: block;
-            }
-
-            &.beige {
-                display: none;
-            }
-        }
-
-        nav ul {
-            a.nav-link {
-                color: var(--primaryColor);
-                text-shadow: none;
-    
-                &::after {
-                    background: var(--primaryColor);
-                }
-            }
-
-            a.btn {
-                box-shadow: none;
-            }
-        }
-    }
-}
-
-@media (max-width: 1250px) { 
-    .nav-container {
-        top: 0;
-        width: 100%;
-        padding: 36px 50px 0 50px;
-
-        img.logo {
-            height: 135px;
-        }
-    }
-}
-
-@media (max-width: 760px) {
-    .nav-container nav ul {
-        width: 100%;
-    }
-}
-
-@media (max-width: 400px) {
+@media (max-width: 1180px) {
     .nav-container {
         padding: 20px;
     }
