REFACTOR : add history of the country

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,14 +3,14 @@
     position: sticky;
     top: 0;
     width: 100%;
-    padding: 8px 50px;
+    padding: 30px 50px;
     background: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     .logo {
-        height: 100px;
+        height: 135px;
 
         &.noir {
             display: block;
@@ -58,5 +58,9 @@
 @media (max-width: 1180px) {
     .nav-container {
         padding: 20px;
+
+        .logo {
+            height: 100px;
+        }
     }
 }
