REFACTOR : page not found component content

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,11 @@
-<p>page-not-found works!</p>
+<app-nav></app-nav>
+<div class="container-page-not-found">
+    <section class="container-404">
+        <img src="/assets/img/page-not-found-2.png" alt="page not found" />
+        <div class="text">
+            <h3>404</h3>
+            <h4>Something went wrong,<br />
+            cowboy !</h4>
+        </div>
+    </section>
+</div>
