REFACTOR : incoming feature component content

--- a/src/app/incoming-feature/incoming-feature.component.html
+++ b/src/app/incoming-feature/incoming-feature.component.html
@@ -1,1 +1,12 @@
-<p>incoming-feature works!</p>
+<app-nav></app-nav>
+<div class="container-incoming-feature">
+    <section>
+        <img class="desktop-device" src="/assets/img/cowgirl-drawing.png" alt="cowgirl drawing" />
+        <div class="text">
+            <h3>Patience, cowboy !</h3><br />
+            <h4>Cette page sera bientôt disponible</h4>
+        </div>
+        <img class="desktop-device" src="/assets/img/cowboy-drawing.png" alt="cowboy drawing" />
+        <img class="tablet-device" src="/assets/img/incoming-feature.png" alt="page à venir illustration" />
+    </section>
+</div>
