--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,12 +12,12 @@
                 <ul [class.is-open]="isMenuOpen">
                     <li><a href="#" routerLink="/" class="nav-link">Accueil</a></li>
                     <li><a href="#" routerLink="/b-a-ba" class="nav-link">B-A-BA de la country</a></li>
-                    <li><a href="#" routerLink="/agenda" class="nav-link">Agenda</a></li>
+                    <li><a href="#" routerLink="/coming-soon" class="nav-link">Agenda</a></li>
                     <li><a href="#" routerLink="/club" class="nav-link">Le club</a></li>
-                    <li><a href="#" routerLink="/livre-or" class="nav-link">Livre d'or</a></li>
-                    <li><a href="#" routerLink="/galerie" class="nav-link">Galerie</a></li>
+                    <li><a href="#" routerLink="/coming-soon" class="nav-link">Livre d'or</a></li>
+                    <li><a href="#" routerLink="/coming-soon" class="nav-link">Galerie</a></li>
                     <li><a href="#" routerLink="/contact" [class.nav-link]="isMenuOpen" class="btn secondary">Contact</a></li>
-                    <li><a href="#" routerLink="/connexion" [class.nav-link]="isMenuOpen" class="btn">Connexion</a></li>
+                    <li><a href="#" routerLink="/coming-soon" [class.nav-link]="isMenuOpen" class="btn">Connexion</a></li>
                 </ul>
             </div>
         </nav>
