REFACTOR : contact component content

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,28 @@
-<p>contact works!</p>
+<app-nav></app-nav>
+<div class="container-contact">
+    <section>
+        <h3>Vous souhaitez d'avantage d'informations sur notre Club ?</h3>
+        <h4>Contactez nous par téléphone ou par mail, et nous vous répondrons dans les meilleurs délais !</h4>
+    </section>
+
+    <article>
+        <div class="contact">
+            <p>
+                <strong>Martine Cazals</strong><br />
+                06.22.03.43.55
+            </p>
+            <p>
+                <strong>Louis Chevilley</strong><br />
+                06.80.05.13.47
+            </p>
+            <p>
+                <strong>Adresse mail</strong><br />
+                countrysaloon82.gmail.com
+            </p>
+            <p>
+                <strong>Page facebook</strong><br />
+                <a target="_blank" href="https://www.facebook.com/countrysaloon82">https://www.facebook.com/countrysaloon82</a>
+            </p>
+        </div>
+    </article>
+</div>
