REFACTOR : add nav + head course page

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -1,1 +1,8 @@
-<p>cours works!</p>
+<app-nav></app-nav>
+<div class="container-cours">
+    <div class="head">
+        <h2>Les cours</h2>
+        <p><strong>Adhésion annuelle :</strong> 50€</p>
+        <a target="_blank" href="/assets/docs/fiche-adhésion.pdf" class="btn secondary">Télécharger la fiche d'adhésion</a>
+    </div>
+</div>
