REFACTOR : add infos course page

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -5,4 +5,35 @@
         <p><strong>Adhésion annuelle :</strong> 50€</p>
         <a target="_blank" href="/assets/docs/fiche-adhésion.pdf" class="btn secondary">Télécharger la fiche d'adhésion</a>
     </div>
+    <div class="body">
+        <img src="/assets/img/club-photos/animations-cours.png" alt="photo animateurs des cours">
+        <div class="infos-cours">
+            <p>
+                <strong>Cours niveau débutant</strong>
+                Les jeudis à 18h45 (1h30)<br />
+                Avec Nathalie
+            </p>
+            <p>
+                <strong>Cours "partner"</strong>
+                Les jeudis à 20h15 (1h00)<br />
+                Avec Pierrette et Louis
+            </p>
+            <div class="map">
+
+            </div>
+            <p>
+                <strong>Cours niveau medium</strong>
+                Les mercredis à 18h45 (1h00)<br />
+                Avec Nathalie et Martine
+            </p>
+            <p>
+                <strong>Cours niveau novice</strong>
+                Les mercredis à 20h00 (1h00)<br />
+                Avec Martine
+            </p>
+            <div class="map">
+                
+            </div>
+        </div>
+    </div>
 </div>
