REFACTOR : add map + infos course page

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -6,34 +6,42 @@
         <a target="_blank" href="/assets/docs/fiche-adhésion.pdf" class="btn secondary">Télécharger la fiche d'adhésion</a>
     </div>
     <div class="body">
-        <img src="/assets/img/club-photos/animations-cours.png" alt="photo animateurs des cours">
         <div class="infos-cours">
-            <p>
-                <strong>Cours niveau débutant</strong>
-                Les jeudis à 18h45 (1h30)<br />
-                Avec Nathalie
-            </p>
-            <p>
-                <strong>Cours "partner"</strong>
-                Les jeudis à 20h15 (1h00)<br />
-                Avec Pierrette et Louis
-            </p>
-            <div class="map">
-
+            <div class="salle-zawislack">
+                <p>
+                    <strong>Cours niveau débutant</strong>
+                    Les jeudis à 18h45 (1h30)<br />
+                    Avec Nathalie
+                </p>
+                <p>
+                    <strong>Cours "partner"</strong>
+                    Les jeudis à 20h15 (1h00)<br />
+                    Avec Pierrette et Louis
+                </p>
+                <p>
+                    Salle Zawislack, en face de la mairie de Saint-Etienne de Tulmont<br />
+                    6 Rue de la Poste, 82410 Saint-Etienne-de-Tulmont
+                    <img class="map" src="/assets/img/salle-zawislack-map.png" alt="Plan salle Zawislack" />
+                </p>
             </div>
-            <p>
-                <strong>Cours niveau medium</strong>
-                Les mercredis à 18h45 (1h00)<br />
-                Avec Nathalie et Martine
-            </p>
-            <p>
-                <strong>Cours niveau novice</strong>
-                Les mercredis à 20h00 (1h00)<br />
-                Avec Martine
-            </p>
-            <div class="map">
-                
+            <div class="salle-fetes">
+                <p>
+                    <strong>Cours niveau medium</strong>
+                    Les mercredis à 18h45 (1h00)<br />
+                    Avec Nathalie et Martine
+                </p>
+                <p>
+                    <strong>Cours niveau novice</strong>
+                    Les mercredis à 20h00 (1h00)<br />
+                    Avec Martine
+                </p>
+                <p>
+                    Salle des fêtes de Saint-Etienne de Tulmont<br />
+                    Rue des sports, 82410 Saint-Etienne-de-Tulmont
+                    <img class="map" src="/assets/img/salle-fetes-map.png" alt="Plan salle des fêtes" />
+                </p>
             </div>
         </div>
+        <img src="/assets/img/club-photos/animations-cours.png" alt="photo animateurs des cours">
     </div>
 </div>
