REFACTOR : add club page content

--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -1,2 +1,44 @@
 <app-nav></app-nav>
-<p>club works!</p>
+<div class="container-club">
+    <section class="head">
+        <h2>Le Club</h2>
+        <p><strong>Adhésion annuelle :</strong> 50€</p>
+        <a href="" class="btn secondary">Télécharger la fiche d'adhésion</a>
+    </section>
+    <section class="histoire">
+        Notre association est née en début de l’année 2018, par cinq danseurs, « Country saloon music sté », qui voulaient pouvoir réviser les nombreuses chorégraphies apprises dans un autre club.<br />
+        Très vite d’autres danseurs nous ont rejoints pour se retrouver huit en fin de première saison, la municipalité nous a mis à disposition une petite salle, « ancienne poste », le jeudi.<br /><br />
+
+        A la rentrée 2019, notre groupe a grandi avec l’arrivée de nouveaux adhérents, nous avons décidé de commencer l’apprentissage pour des débutants, animé par Martine, qui nous à préparé notre première démonstration pour le Téléthon de décembre 2019, cette même année lors de notre première AG, le bureau a été restructuré avec l’arrivée de nouveaux membres, les structures de l’association ont été revues entièrement, nous nous sommes renommés country saloon 82.<br /><br />
+
+        A la rentrée 2020, la salle étant trop petite, nous avons sollicité un créneau horaire à la salle des fêtes, un petit créneau le mercredi nous a été accordé. En cours d’année la gestion du COVID, nous a perturbé et a aussi consolidé la cohésion du groupe.<br /><br />
+
+        2021, la fin de l’épisode COVID... la reprise agréable avec un grand nombre de nouveaux danseurs débutants et une grande envie de sortir après un confinement sévère !<br /><br />
+
+        2022, notre progression du nombre d’adhérents se poursuit, une nouvelle organisation se met en place pour gérer l’apprentissage.<br /><br />
+
+        En mars 2023, nous avons organisé un après-midi initiation suivie d’une soirée concert avec le groupe DUSTY ROADS, un grand succès qui nous a motivé pour le futur. En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
+
+        Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons rajouté un créneau horaire pour les grands débutants le jeudi dans une nouvelle salle de danse aménagée par la municipalité, nous avons opté pour mettre un maximum de moyens pour les débutants.<br /><br />
+
+        Mercredi : <br />
+        Un cours médium assuré par Martine et Nathalie<br />
+        Un cours Novice ou intermédiaire assuré par Martine<br /><br />
+
+        Jeudi :<br />
+        Un cours débutant assuré par Nathalie<br />
+        Un cours Partner assuré par Louis aidé de Pierrette
+    </section>
+    <section>
+        <h2>Bureau du club</h2>
+        <div class="container-bureau">
+            <img src="/assets/img/club-photos/Louis.png" alt="président du club">
+            <img src="/assets/img/club-photos/Frédéric.png" alt="président adjoint">
+            <img src="/assets/img/club-photos/Joëlle.png" alt="trésorière">
+            <img src="/assets/img/club-photos/Philippe.png" alt="secrétaire">
+            <img src="/assets/img/club-photos/Nathalie.png" alt="animatrice">
+            <img src="/assets/img/club-photos/Martine.png" alt="animatrice">
+            <img src="/assets/img/club-photos/Sandrine.png" alt="membre actif">
+        </div>
+    </section>
+</div>
