REFACTOR : add header to contact page

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     max-width: 917px;
     margin: auto;
+    margin-top: 50px;
     padding: 80px 0;
 
     section {
