--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-nav></app-nav>
+<app-header></app-header>
 <div class="container-contact">
     <section>
         <h3>Vous souhaitez d'avantage d'informations sur notre Club ?</h3>
