REFACTOR : last modif

--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -3,7 +3,7 @@
     <section class="head">
         <h2>Le Club</h2>
         <p><strong>Adhésion annuelle :</strong> 50€</p>
-        <a href="" class="btn secondary">Télécharger la fiche d'adhésion</a>
+        <a href="/assets/docs/fiche-adhésion.pdf" target="_blank" class="btn">Télécharger la fiche d'adhésion</a> <a href="#" routerLink="/cours" class="btn secondary">Voir les cours</a>
     </section>
     <section class="histoire">
         Notre association est née en début de l’année 2018, par cinq danseurs, « Country saloon music sté », qui voulaient pouvoir réviser les nombreuses chorégraphies apprises dans un autre club.<br />
@@ -36,9 +36,9 @@
             <img src="/assets/img/club-photos/Frédéric.png" alt="président adjoint">
             <img src="/assets/img/club-photos/Joëlle.png" alt="trésorière">
             <img src="/assets/img/club-photos/Philippe.png" alt="secrétaire">
+            <img src="/assets/img/club-photos/Sandrine.png" alt="secrétaire adjointe">
             <img src="/assets/img/club-photos/Nathalie.png" alt="animatrice">
             <img src="/assets/img/club-photos/Martine.png" alt="animatrice">
-            <img src="/assets/img/club-photos/Sandrine.png" alt="membre actif">
         </div>
     </section>
 </div>
