--- a/src/app/mentions-legales/mentions-legales.component.html
+++ b/src/app/mentions-legales/mentions-legales.component.html
@@ -9,7 +9,7 @@
         
         <p style="text-align:justify">Statut du propriétaire : <strong>association</strong><br />
         Le Propriétaire est : <strong>Country Saloon 82</strong><br />
-        Adresse postale du propriétaire : <strong>2 impasse du Général Aubugeois 31400 Toulouse</strong><br />
+        Adresse postale du propriétaire : <strong> 40 chemin de Dariac 82410 St Étienne de tulmont </strong><br />
          <br />
         Le Créateur du site est : <strong>https://line-development.fr/</strong><br />
         Le Responsable de la  publication est : <strong>Pauline Lesueur</strong><br />
