REFACTOR : modif img and text

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -28,7 +28,7 @@
                 <p>
                     <strong>Cours niveau medium</strong>
                     Les mercredis à 18h45 (1h00)<br />
-                    Avec Nathalie et Martine
+                    Avec Martine et Nathalie
                 </p>
                 <p>
                     <strong>Cours niveau novice</strong>
