add tel and mailto links

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,15 +9,15 @@
         <div class="contact">
             <p>
                 <strong>Martine Cazals</strong><br />
-                06.22.03.43.55
+                <a href="tel:+33622034355">06.22.03.43.55</a> 
             </p>
             <p>
                 <strong>Louis Chevilley</strong><br />
-                06.80.05.13.47
+                <a href="tel:+33680051347">06.80.05.13.47</a> 
             </p>
             <p>
                 <strong>Adresse mail</strong><br />
-                countrysaloon82.gmail.com
+                <a href="mailto:countrysaloon82@gmail.com">countrysaloon82@gmail.com</a>
             </p>
             <p>
                 <strong>Page facebook</strong><br />
